kubernetes/apps/trello-randomizer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trello-randomizer
  labels:
    app: trello-randomizer
spec:
  selector:
    matchLabels:
      app: trello-randomizer
  template:
    metadata:
      labels:
        app: trello-randomizer
    spec:
      containers:
        - name: trello-randomizer
          image: ghcr.io/dartagan/trello-randomizer:20260329050389 # {"$imagepolicy": "apps:trello-randomizer"}
          ports:
            - containerPort: 8080
