kubernetes/apps/trello-randomizer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trello-randomizer
spec:
  selector:
    app: trello-randomizer
  ports:
    - protocol: TCP
      port: 8080
