kubernetes/apps/trello-randomizer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trello-randomizer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - trello-randomizer.immortalkeep.com
      secretName: trello-randomizer-ingress-tls
  rules:
    - host: trello-randomizer.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: trello-randomizer
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trello-randomizer-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-external
  tls:
    - hosts:
        - trello-randomizer.immortalkeep.com
      secretName: trello-randomizer-ingress-tls
  rules:
    - host: trello-randomizer.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: trello-randomizer
                port:
                  number: 8080
